# build_cmake

./: .gitignore  CMakeLists.txt  CMakeLists1.txt  make_and_run.sh
code_set/: combine_num_min.cpp  num_1andN.cpp
demo/: main.cpp
include/: sum.h
src/: sum.cpp
